--- a/config.json
+++ b/config.json
@@ -79,15 +79,15 @@
     },
         "qiqi": {
         "api": "https://www.qiqidys.com/api.php/provide/vod",
-        "name": "七七资源",
+        "name": "七七资源"
     },
     "xiaomaomi": {
         "api": "https://zy.xmm.hk/api.php/provide/vod",
-        "name": "小猫咪资源",
+        "name": "小猫咪资源"
     },
     "hwba": {
         "api": "https://cjhwba.com/api.php/provide/vod",
-        "name": "华为吧资源",
+        "name": "华为吧资源"
     },
     "baidu": {
         "api": "https://api.apibdzy.com/api.php/provide/vod",
